--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
   <div class="card">
     <h2>Welcome to Leafmart 🌱</h2>
     <p>
-      Leafmart is a space where makers, designers and fabricators come together
-      to share stories, processes and products. This blog documents experiments
-      with 3D printing, ceramics, wood, concrete and sustainable materials.
+      Leafmart is a space where makers, designers, and artists come together to share their stories, processes, and products. This website documents experiments with 3D printing, ceramics, wood, concrete, and sustainable materials, celebrating the journey from idea to creation.
     </p>
   </div>
 
