Adding Logo.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Leafmart</title>
+  <img src="Leafmart_logo_01.png" alt="Leafmart logo" style="height:70px; margin-bottom: 1rem;" />
   <meta name="description" content="Leafmart – a maker journal and blog for handmade, 3D printed and crafted home decor products." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
