--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+tre<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <img src="Leafmart_logo_01.png" alt="Leafmart logo" style="height:70px; margin-bottom: 1rem;" />
+  <title>Leafmart</title>
   <meta name="description" content="Leafmart – a maker journal and blog for handmade, 3D printed and crafted home decor products." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -52,7 +52,7 @@
 <body>
 
 <header>
-  <h1>Leafmart</h1>
+  <img src="Leafmart_logo_01.png" alt="Leafmart logo" style="height:70px; margin-bottom: 1rem;" />
   <p>A maker journal for handmade, 3D printed and crafted home decor products</p>
   <nav>
     <a href="#">Blog</a>
