--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-tre<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -52,7 +52,7 @@ tre<!DOCTYPE html>
 <body>
 
 <header>
-  <img src="Leafmart_logo_01.png" alt="Leafmart logo" style="height:70px; margin-bottom: 1rem;" />
+  <img src="Leafmart_logo_01.png" alt="Leafmart logo" style="height:40px; margin-bottom: 1rem;" />
   <p>A maker journal for handmade, 3D printed and crafted home decor products</p>
   <!--
 <nav>
